chore: restructure project dirs
- Faster compilation by splitting main app and library into separate CMakeLists.txt
- Restructure dirs: lib is currently in foo/ and the window code in gui/.  GLAD is in 3rdparty/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,42 +13,10 @@ thrust_create_target(Thrust)
 set(CMAKE_CUDA_ARCHITECTURES native)
 set(CUDA_SEPARABLE_COMPILATION ON)
 
-# Fetch libs for ImGui and GLAD (and GLFW)
+# Fetch libs for ImGui (which brings in GLFW), and GLAD in 3rdparty
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 find_package(imgui REQUIRED)
-add_subdirectory(glad)
+add_subdirectory(3rdparty)
 
-# Add library to test linkage
-add_library(foo_lib STATIC
-    foo.cu
-)
-
-target_link_libraries(foo_lib
-    PUBLIC
-        CUDA::cudart
-        Thrust
-)
-
-target_compile_options(foo_lib
-    PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
-        --extended-lambda
-        -Wno-deprecated-gpu-targets
->)
-
-# Main app using library
-add_executable(main_app
-    main.cu
-)
-
-target_link_libraries(main_app
-    PRIVATE
-        imgui_static
-        foo_lib
-        glad
-)
-
-target_compile_options(main_app
-    PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
-        --extended-lambda
-        -Wno-deprecated-gpu-targets
->)
+add_subdirectory(foo)
+add_subdirectory(gui)
